# fsharp-ai-tools

./: .gitignore  DSLCodeGenerationFSharp.fsx  Dockerfile  FSAI.sln  FSharp.AI.sln  LICENSE  LIVE.md  OperationCodeGenerationCSharp.fsx  OperationCodeGenerationFSharp.fsx  OperationCodeGenerationNet.fsx  OperationsCodeGeneration.fsx  README.md  Tensorflow.FSharp.sln  appveyor.yml  entrypoint.sh  fsharplint.json  nativeWorkaround.fs  paket.dependencies  setup.fsx
RunTest/: AssemblyInfo.fs  Program.fs  RunTest.fsproj  main.fs  packages.config
RunTest2/: MNist.fs  NeuralStyleTransferDSL.fs  Program.fs  RunModels.fsproj
Tensorflow_FSharp/: Common.fs  DType.fs  Datasets.fs  Disposable.fs  Graph.fs  Operation.fs  Operations.g.fs  OperationsExtras.fs  Output.fs  Queue.fs  Session.fs  SessionExtras.fs  Tensor.fs  Tensorflow.fs  TensorflowGlobal.fs  Tensorflow_FSharp.XML  Tensorflow_FSharp.fsproj  Tensorflow_FSharp.sln  Utils.fs  Variable.fs
Tensorflow_FSharp_Test/: ImageClassifier.fsx  NugetDeployment.fsx  Program.fs  Tensorflow_FSharp_Test.fsproj  Testing.fsx  Tests.fs
examples/: ImageClassifier.fsx  LinearRegression.fsx  NeuralStyleTransfer-dsl.fsx  NeuralStyleTransfer.fsx  NugetDeployment.fsx  README.md  TF.MNist.fsx  Torch.MNist.fsx  TorchSharp.MNist.fsx  dsl-live.fsx
native/: CMakeLists.txt  CopyHeaders.fsx  CppProperties.json  README.md
native/shim/: CMakeLists.txt  foo.cc  foo.h  record_reader.cc  record_reader.h  utilities.h
native/shim/ops/: README.md
scripts/: test1.ipynb  test2.ipynb
setup/: BuildTensorflowProto.fsx  LinuxNativeWorkaround.fs  setup.fsx  (+5 more)
(+175 files in other folders)
